WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68860
REGRESSION (
r95912
): Conservative marking doesn't filter out pointers to MarkedBlock metadata
https://bugs.webkit.org/show_bug.cgi?id=68860
Summary
REGRESSION (r95912): Conservative marking doesn't filter out pointers to Mark...
Geoffrey Garen
Reported
2011-09-26 18:19:37 PDT
REGRESSION (
r95912
): Conservative marking doesn't filter out pointers to MarkedBlock metadata
Attachments
Patch
(2.60 KB, patch)
2011-09-26 18:24 PDT
,
Geoffrey Garen
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2011-09-26 18:24:30 PDT
Created
attachment 108772
[details]
Patch
Geoffrey Garen
Comment 2
2011-09-26 20:22:59 PDT
Committed
r96068
: <
http://trac.webkit.org/changeset/96068
>
Csaba Osztrogonác
Comment 3
2011-09-26 23:32:54 PDT
***
Bug 68788
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug