REGRESSION (r95912): Conservative marking doesn't filter out pointers to MarkedBlock metadata https://bugs.webkit.org/show_bug.cgi?id=68860

Reviewed by Oliver Hunt.

Bencher says no performance change, maybe a 7% speedup on kraken-imaging-darkroom.

* heap/MarkedBlock.h:
(JSC::MarkedBlock::isAtomAligned): Renamed atomMask to atomAlignment mask
because the mask doesn't produce the actual atom number.

(JSC::MarkedBlock::isLiveCell): Testing just for alignment isn't good
enough; we also need to test that a pointer is beyond the metadata section
of a MarkedBlock, to avoid treating random metadata as a JSCell.


Canonical link: https://commits.webkit.org/84841@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96068 268f45cc-cd09-0410-ab3c-d52691b4dbfc